# Mangatheque

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: architecture-dry.mdc  core-langue.mdc  cross-platform.mdc  git-workflow.mdc  react-ui.mdc  supabase.mdc
.github/workflows/: build.yml  planning-sync.yml  release.yml
public/: tracker-oauth.html
public/tampermonkey/: Nautiljon-Mangatheque.user.js
scripts/: build-release.ps1  log-noise-filter.mjs  run-with-log.mjs  setup-toolchains-f.ps1  setup-updater-signing.ps1  sync-nautiljon-planning.mjs  validate-github-secrets.ps1
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-fetch-adkami-agenda.toml  allow-fetch-cover-image.toml  allow-fetch-nautiljon-planning.toml  allow-oauth-token-exchange.toml
src-tauri/src/: adkami_fetch.rs  image_proxy.rs  import_server.rs  lib.rs  main.rs  nautiljon_fetch.rs  oauth_proxy.rs  window_layout.rs
src-tauri/src/import_server/: http.rs  mod.rs  state.rs
src/constants/: animeStatus.ts  mediaTags.ts  ownerColors.ts  userReadingStatus.ts  workStatus.ts
src/contexts/: AuthContext.tsx  OwnersContext.tsx
src/hooks/: useAdkamiAgendaSync.ts  useAnimes.ts  useAppMainScrollLock.ts  useAppUpdater.ts  useAutoCollapseWhenObscured.ts  useCloseLibraryFiltersOnScroll.ts  useDebouncedSearchCommit.ts  useImportListener.ts  (+15 more)
supabase/: schema.sql
(+326 files in other folders)
